# tumbller-8004-mcp

./: .env.example  README.md  pyproject.toml
docs/: CHANGELOG.md  MODULAR_FRAMEWORK_PLAN.md  PLAN.md
src/: discover_robot_agent.py  fix_metadata.py  generate_wallet.py  register_agent.py  server.py  tumbller_client.py  tunnel.py  update_agent.py
